--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Meta tags do Open Graph (Para WhatsApp, Facebook e Instagram) -->
     <meta property="og:title" content="Noir Agcy">
     <meta property="og:description" content="Informações de contato e entre outras informações.">
-    <meta property="og:image" content="https://noiragcy.github.io/NoirAgcy/IMGS/miniatura.png">
+    <meta property="og:image" content="https://noiragcy.github.io/IMGS/miniatura.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
